--- a/AboutPage.html
+++ b/AboutPage.html
@@ -43,8 +43,9 @@
 	<div class="AboutParagraph"> <!--Text to appear on the page with information about myself-->
 			<h1>About Me:</h1>
 			<p><b>Intro:</b><br>My name is Luke Aldred, born March 7th 2001, and I am from Nottinghamshire. I am looking for a 2021-2022 Year Placement.<br><br>
-			<b>Education:</b><br>I attended Bilborough Sixth Form College from 2017-2020, in which I achieved 3 A-Levels in Computer Science, Business and English Language.<br>
-			I am now studying Computer Science at Nottingham Trent University BSc with a Year In Industry, achieving at a 1MID (1st) grade for the first year.<br><br>
+			<b>Education:</b><br>
+			I am currently studying Computer Science at Nottingham Trent University BSc with a Year In Industry, achieving a 1MID (1st) grade for the first year.<br>
+			I attended Bilborough Sixth Form College from 2017-2020, in which I achieved 3 A-Levels (BBC) in Computer Science, English Language and Business.<br><br>
 			<b>Hobbies and Interests:</b><br>
 				- Reading<br>
 				- Walking<br>
@@ -60,27 +61,27 @@
 				- Fundraising for the British Lung Foundation<br>
 				- Completed the Young Enterprise Company Program at college<br><br>
 			<b>Extracurricular and Academic Activities:</b><br>
+			<b>- Attended several webinars on sites such as Bright Network and Meetup to help with improving my employability</b><br>
+			Ongoing<br>
+			Attended online webinars on how to improve my employability, such as “BrightLive: CVs and Cover Letters” and "BrightLive: Improving your Commercial Awareness" from 
+			Bright Network in order to see how I can improve my CV and Cover Letters and “A Day in the Life of a Graduate Software Engineer at Capital One” as well as “Introduction 
+			to Credit Card Marketing” on Meetup in order to get an understanding of how processes work at Capital One.<br><br>
 			<b>- JP Morgan Chase and Co. Virtual Experience Program Participant</b><br>
 			June - July 2020 – 15 hours approx.<br>
 			Participated in the open access JP Morgan Chase and Co. Virtual Experience Program with InsideSherpa.<br>
 			Tasks Completed include:<br>
 			Establishing Financial Data Feeds <br>
 			Frontend Web Development <br>
-			Data Visualization with Perspective<br>
+			Data Visualization with Perspective<br><br>
 			<b>- Bright Network Technology Internship Experience UK Participant</b><br>
 			June - July 2020 – 20 hours<br>
 			Attended multiple seminars given by the technology companies Accenture, Google, Goldman Sachs, Bloomberg, Amazon and Vodafone.<br>
-			Researched and developed a hypothetical plan for using Facial Verification in an app<br>
+			Researched and developed a hypothetical plan for using Facial Verification in an app<br><br>
 			<b>- Course Representative for the Computer Science, Software Engineering and Games Technology cohort</b><br>
 			October 2019 - June 2020<br>
 			Attended multiple meetings with the cohort lecturers to feedback the positives and negatives from the students to bring around change on the course;<br>
 			meetings hosted by the university Student Union were also an opportunity for me to feedback any positives and negatives from the students to bring about change<br> 
-			on a university level.<br>
-			<b>- Attended several webinars on sites such as Bright Network and Meetup to help with improving my employability</b><br>
-			Ongoing<br>
-			Attended online webinars on how to improve my employability, such as “BrightLive: CVs and Cover Letters” and "BrightLive: Improving your Commercial Awareness" from 
-			Bright Network in order to see how I can improve my CV and Cover Letters and “A Day in the Life of a Graduate Software Engineer at Capital One” as well as “Introduction 
-			to Credit Card Marketing” on Meetup in order to get an understanding of how processes work at Capital One.<br><br>
+			on a university level.<br><br><br>
 			
 			<b>Programming Experience:</b><br>
 		
@@ -101,6 +102,9 @@
 			</div>
 			<div class="ProgressBar">
 				<div class="Bar" style="background-color:#00FFCD;width:40%;color:black;">Javascript</div>
+			</div>
+			<div class="ProgressBar">
+				<div class="Bar" style="background-color:#C5D86D;width:40%;color:black;">Assembley</div>
 			</div>
 			</p><br>
 		</div>
