--- a/AboutPage.html
+++ b/AboutPage.html
@@ -77,11 +77,12 @@
 			June - July 2020 – 20 hours<br>
 			Attended multiple seminars given by the technology companies Accenture, Google, Goldman Sachs, Bloomberg, Amazon and Vodafone.<br>
 			Researched and developed a hypothetical plan for using Facial Verification in an app<br><br>
-			<b>- Course Representative for the Computer Science, Software Engineering and Games Technology cohort</b><br>
+			<b>- Academic Representative for the Computer Science cohort</b><br>
 			October 2019 - June 2020<br>
 			Attended multiple meetings with the cohort lecturers to feedback the positives and negatives from the students to bring around change on the course;<br>
 			meetings hosted by the university Student Union were also an opportunity for me to feedback any positives and negatives from the students to bring about change<br> 
-			on a university level.<br><br><br>
+			on a university level. Due to a lack of Academic Representatives for the Software Engineering and Games Technology cohorts, me and another Academic 
+			Representative who I worked with were asked to gather feedback from these cohorts as well until they found another person to be their representative.<br><br><br>
 			
 			<b>Programming Experience:</b><br>
 		
